# PilotGame

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
lib/: CMakeLists.txt
src/: Main.cpp  MyMain.h
